@@ -89,6 +89,9 @@ public:
 	void setSubDelay(double delay);
 	void setLoop(int v);
 	void takeScreenshot(ScreenshotType t, bool include_subtitles = false);
+#ifdef CAPTURE_STREAM
+	void switchCapturing();
+#endif
 	void setTitle(int ID);
 	void changeVF(const QString & filter, bool enable, const QVariant & option = QVariant());
 	void changeStereo3DFilter(bool enable, const QString & in, const QString & out);
@@ -166,6 +169,10 @@ private:
 	int br_current_title;
 
 	QString previous_eq;
+
+#ifdef CAPTURE_STREAM
+	bool capturing;
+#endif
 };
 
 #endif
