@@ -27,6 +27,7 @@ DEFINES += REMINDER_ACTIONS
 DEFINES += SHAREWIDGET
 #DEFINES += USE_FONTCONFIG_OPTIONS
 DEFINES += AUTO_SHUTDOWN_PC
+DEFINES += CAPTURE_STREAM
 
 DEFINES += MPV_SUPPORT
 DEFINES += MPLAYER_SUPPORT
